Add map plugins accessor